--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -3,7 +3,7 @@
 #   Standard properties
 # =====================================================
 
-sonar.projectKey=memetoasty.kioku
+sonar.projectKey=memetoasty_kioku
 sonar.projectName=Go SQ-Scanner-based project analyzed on SonarCloud using Travis
 sonar.projectVersion=1.0
 
