--- a/.travis.yml
+++ b/.travis.yml
@@ -19,7 +19,7 @@ script:
   - go test -json ./... > report.json
   - go test -coverprofile=coverage.out ./...
   - cd ..
-  - sonar-scanner
+  - sonar-scanner -X
 
 cache:
   directories:
