--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -7,10 +7,10 @@ sonar.projectKey=memeToasty_kioku
 sonar.projectName=Go SQ-Scanner-based project analyzed on SonarCloud using Travis
 sonar.projectVersion=1.0
 
-sonar.sources=./**
+sonar.sources=backend,frontend
 sonar.exclusions=**/*_test.go,**/vendor/**
  
-sonar.tests=./**
+sonar.tests=backend
 sonar.test.inclusions=**/*_test.go
 sonar.test.exclusions=**/vendor/**
 # =====================================================
