adapted organization key

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -2,8 +2,8 @@
 # =====================================================
 #   Standard properties
 # =====================================================
-sonar.organization=memeToasty
-sonar.projectKey=kioku
+sonar.organization=memetoasty
+sonar.projectKey=memeToasty_kioku
 sonar.projectName=Go SQ-Scanner-based project analyzed on SonarCloud using Travis
 sonar.projectVersion=1.0
 
