removed travis metadata

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -4,7 +4,7 @@
 # =====================================================
 sonar.organization=memetoasty
 sonar.projectKey=memeToasty_kioku
-sonar.projectName=Go SQ-Scanner-based project analyzed on SonarCloud using Travis
+sonar.projectName=Go SQ-Scanner-based project
 sonar.projectVersion=1.0
 
 sonar.sources=.
@@ -13,14 +13,6 @@ sonar.exclusions=**/*_test.go,**/vendor/**
 sonar.tests=.
 sonar.test.inclusions=**/*_test.go
 sonar.test.exclusions=**/vendor/**
-# =====================================================
-#   Meta-data for the project
-# =====================================================
-
-sonar.links.homepage=https://github.com/SonarSource/sonarcloud_example_go-sqscanner-travis
-sonar.links.ci=https://travis-ci.org/SonarSource/sonarcloud_example_go-sqscanner-travis
-sonar.links.scm=https://github.com/SonarSource/sonarcloud_example_go-sqscanner-travis
-sonar.links.issue=https://github.com/SonarSource/sonarcloud_example_go-sqscanner-travis/issues
 
 # =====================================================
 #   Properties specific to Go
