--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -7,9 +7,12 @@ sonar.projectKey=memeToasty_kioku
 sonar.projectName=Go SQ-Scanner-based project
 sonar.projectVersion=1.0
 
-sonar.sources=.
+sonar.sources=backend
+sonar.exclusions=**/*_test.go,**/vendor/**
 
-sonar.tests=.
+sonar.tests=backend
+sonar.test.inclusions=**/*_test.go
+sonar.test.exclusions=**/vendor/**
 
 # =====================================================
 #   Properties specific to Go
