Try monorepo option

--- a/backend/sonar-project.properties
+++ b/backend/sonar-project.properties
@@ -3,14 +3,14 @@
 #   Standard properties
 # =====================================================
 sonar.organization=memetoasty
-sonar.projectKey=memeToasty_kioku
+sonar.projectKey=memeToasty_kioku_backend
 sonar.projectName=Go SQ-Scanner-based project
 sonar.projectVersion=1.0
 
-sonar.sources=backend
+sonar.sources=.
 sonar.exclusions=**/*_test.go,**/vendor/**
 
-sonar.tests=backend
+sonar.tests=.
 sonar.test.inclusions=**/*_test.go
 sonar.test.exclusions=**/vendor/**
 
@@ -18,5 +18,5 @@ sonar.test.exclusions=**/vendor/**
 #   Properties specific to Go
 # =====================================================
 
-sonar.go.tests.reportPaths=backend/report.json
-sonar.go.coverage.reportPaths=backend/coverage.out
+sonar.go.tests.reportPaths=report.json
+sonar.go.coverage.reportPaths=coverage.out
