--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -7,6 +7,8 @@ sonar.projectKey=memeToasty_kioku_backend
 sonar.projectName=Go SQ-Scanner-based project
 sonar.projectVersion=1.0
 
+sonar.projectBaseDir=backend
+
 sonar.sources=.
 sonar.exclusions=**/*_test.go,**/vendor/**
 
