This pathing is killing me

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -20,5 +20,5 @@ sonar.test.exclusions=**/vendor/**
 #   Properties specific to Go
 # =====================================================
 
-sonar.go.tests.reportPaths=report.json
-sonar.go.coverage.reportPaths=coverage.out
+sonar.go.tests.reportPaths=backend/report.json
+sonar.go.coverage.reportPaths=backend/coverage.out
