--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -7,8 +7,6 @@ sonar.projectKey=memetoasty_kioku_backend
 sonar.projectName=Go SQ-Scanner-based project
 sonar.projectVersion=1.0
 
-sonar.projectBaseDir=backend
-
 sonar.sources=.
 sonar.exclusions=**/*_test.go,**/vendor/**
 
@@ -20,5 +18,5 @@ sonar.test.exclusions=**/vendor/**
 #   Properties specific to Go
 # =====================================================
 
-sonar.go.tests.reportPaths=backend/report.json
-sonar.go.coverage.reportPaths=backend/coverage.out
+sonar.go.tests.reportPaths=report.json
+sonar.go.coverage.reportPaths=coverage.out
