--- a/backend/sonar-project.properties
+++ b/backend/sonar-project.properties
@@ -4,7 +4,7 @@
 # =====================================================
 sonar.organization=memetoasty
 sonar.projectKey=memetoasty_kioku_backend
-sonar.projectName=Go SQ-Scanner-based project
+sonar.projectName=Kioku Backend
 sonar.projectVersion=1.0
 
 sonar.sources=.
