--- a/frontend/sonar-project.properties
+++ b/frontend/sonar-project.properties
@@ -9,5 +9,9 @@ sonar.projectVersion=1.0
 
 sonar.sources=.
 
-sonar.tests=.
-sonar.test.exclusions=.
+
+# =====================================================
+#   Typescript specific properties
+# =====================================================
+
+sonar.typescript.tsconfigPaths=.
